--- a/styles/style.css
+++ b/styles/style.css
@@ -2,14 +2,22 @@
     padding: 0;
     margin: 0;
     text-decoration: none;
-    color: black;
+    color: #00008B;
+    font-family: "Lato", sans-serif;
 }
+
+/* COLORES (AZUL PROFUNDO, ROSA PASTEL, BLANCO)
+#00008B
+#65bcde80
+#87cfeb36
+#ffd2d2
+ */
 
 /* INICIO */
 .gridContainer {  
     display: grid;
     grid-template-rows: 8vh 92vh;
-    background-image:url("/images/inicio.jpg");
+    background-image:url("/images/inicio--img.jpg");
     height: 100vh;
     background-size: cover;
     background-position: 50% 30%;
@@ -70,17 +78,17 @@
     margin: auto;
     font-size: 3.5vh;
     font-weight: 500;
-    border: #fff49e44 1.5px solid;
+    border: #ffd2d270 1.5px solid;
     border-radius: 8px;
     width: 24vw;
     height: 10vh;
-    background-color:#fff49e1c ;
+    background-color:#ffd2d230 ;
     display: grid;
 }
 
 .containerBox:hover{
-    background-color:#fff49e31 ;
-    scale: 1.05;
+    background-color:#ffd2d241 ;
+    scale: 1.01;
 }
 
 /* HOW TO AFFECT A PARENT HOVERING A CHILD? */
@@ -92,7 +100,7 @@
     align-self: center;
     /* color: rgb(255, 255, 255); */
     /* text-shadow: 1px 1px 2px rgb(186, 186, 186), 0 0 1em rgb(31, 158, 78), 0 0 0.2em rgb(255, 13, 0); */
-    text-shadow: 1px 1px 1px rgb(186, 186, 186), -1px -1px 2px rgb(186, 186, 186)
+    text-shadow: 1px 1px 1px #ffd2d2, -1px -1px 2px #ffd2d2
 }
 
 .containerStart{
@@ -103,10 +111,10 @@
 
 .containerStart p{
     display: inline-block;
+    text-shadow: 1px 1px 1px #ffd2d2;
 }
-
 .containerStart p:hover{
-    color: rgba(0, 0, 0, 0.302) ;
+    color: #00008bce ;
     scale: 1.1;
 }
 
@@ -123,7 +131,7 @@
 }
 
 .arrow button:hover{
-    scale: 1.3;
+    scale: 1.05;
 }
 
 .button1{
@@ -135,7 +143,87 @@
 }
 
 /* SIGN IN */
+.header-Sign{
+    height: 8vh;
+}
+.main-Sign{
+    display: grid;
+    grid-template-columns: 55% 45%;
+    height: 92vh;
+}
 
+.main-Sign__info{
+    display: flex;
+    background-image: url("/images/main-sign__info--img2.jpg");
+    height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+}
 
+.main-Sign__text{
+    margin: auto;
+    width: 75%;
+    height: 60%;
+    background-color:#fce7e766;
+}
+
+.main-Sign__square{
+    margin: 10% 20% 20% 20%;
+}
+
+.main-Sign__container{
+    display: flex;
+}
+.main-Sign__form{
+    margin: auto;
+    width: 75%;
+    height: 70%;
+    /* background-color: ; */
+    display: flex;
+    flex-direction: column;
+    padding: 4vh 4vw;
+}
+
+.main-Sign__form--description{
+    margin: 2vh 0;
+    font-size: 0.85em;
+}
+
+.main-Sign__label{
+    margin: 1vh 0.5vw;
+}
+.main-Sign__input{
+    border: 1px solid #ffd2d2;
+    /* #87CEEB; */
+    border-radius: 3px;
+    margin: 1vh 0;
+    padding: 1vh 0;
+}
+
+.main-Sign__help{
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.75em;
+    margin: 1vh 0.2vw;
+}
+
+.main-Sign__other-option, .main-Sign__create-account{
+    margin: auto;
+}
+
+.main-Sign__social-media{
+    display: flex;
+    justify-content: space-around;
+    text-decoration: none;
+
+}
+
+.main-Sign__social-media a{
+    text-decoration: none;
+}
+
+.main-Sign__social-media i{
+    width: 1vw;
+}
 
 
