--- a/styles/style.css
+++ b/styles/style.css
@@ -10,37 +10,46 @@
   text-decoration: none;
   color: #00008B;
   font-family: "Lato", sans-serif;
+  font-size: 13px;
 }
 
-.header-Sign {
+.grid-container-sign {
+  background-image: url("/images/main-sign__info--img2.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
+}
+.grid-container-sign .header-Sign {
   height: 8vh;
 }
-
-.main-Sign {
+.grid-container-sign .header-Sign nav {
+  height: 100%;
+}
+.grid-container-sign .header-Sign nav .header-Sign__logo {
+  display: flex;
+  align-items: center;
+}
+.grid-container-sign .main-Sign {
   display: grid;
   grid-template-columns: 55% 45%;
   height: 92vh;
 }
-.main-Sign__info {
+.grid-container-sign .main-Sign__info {
   display: flex;
-  background-image: url("/images/main-sign__info--img2.jpg");
   height: 100%;
-  background-size: cover;
-  background-position: 50% 50%;
 }
-.main-Sign__info .main-Sign__text {
+.grid-container-sign .main-Sign__info .main-Sign__text {
   margin: auto;
   width: 75%;
   height: 60%;
   background-color: rgba(252, 231, 231, 0.4);
 }
-.main-Sign__info .main-Sign__text .main-Sign__square {
+.grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square {
   margin: 10% 20% 20% 20%;
 }
-.main-Sign__container {
+.grid-container-sign .main-Sign__container {
   display: flex;
 }
-.main-Sign__container .main-Sign__form {
+.grid-container-sign .main-Sign__container .main-Sign__form {
   margin: auto;
   width: 75%;
   height: 70%;
@@ -49,38 +58,35 @@
   flex-direction: column;
   padding: 4vh 4vw;
 }
-.main-Sign__container .main-Sign__form--description {
+.grid-container-sign .main-Sign__container .main-Sign__form--description {
   margin: 2vh 0;
   font-size: 0.85em;
 }
-.main-Sign__container .main-Sign__form .main-Sign__label {
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__label {
   margin: 1vh 0.5vw;
 }
-.main-Sign__container .main-Sign__form .main-Sign__input {
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input {
   border: 1px solid #ffd2d2;
   /* #87CEEB; */
   border-radius: 3px;
   margin: 1vh 0;
   padding: 1vh 0;
 }
-.main-Sign__container .main-Sign__form .main-Sign__help {
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__help {
   display: flex;
   justify-content: space-between;
   font-size: 0.75em;
   margin: 1vh 0.2vw;
 }
-.main-Sign__container .main-Sign__form .main-Sign__other-option, .main-Sign__container .main-Sign__form .main-Sign__create-account {
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__other-option, .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__create-account {
   margin: auto;
 }
-.main-Sign__container .main-Sign__form .main-Sign__social-media {
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__social-media {
   display: flex;
   justify-content: space-around;
-  text-decoration: none;
+  list-style-type: none;
 }
-.main-Sign__container .main-Sign__form .main-Sign__social-media a {
-  text-decoration: none;
-}
-.main-Sign__container .main-Sign__form .main-Sign__social-media a i {
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__social-media i {
   width: 1vw;
 }
 
@@ -102,82 +108,79 @@
   background-color: palegoldenrod;
 }
 
-.gridContainer {
+.grid-container-inicio {
   display: grid;
   grid-template-rows: 8vh 92vh;
   background-image: url("/images/inicio--img.jpg");
   height: 100vh;
   background-size: cover;
-  background-position: 50% 30%;
-  /* grid-template-columns: 0.4fr 1.4fr 1.4fr 1.4fr 0.4fr;
-  grid-template-rows: 1.4fr 0.8fr 0.8fr; */
+  background-position: 100%;
 }
-.gridContainer .header {
+.grid-container-inicio .header-inicio {
   display: flex;
   justify-content: end;
 }
-.gridContainer .header ul {
+.grid-container-inicio .header-inicio__ul {
   display: flex;
-  width: 15vw;
+  width: 35vw;
   height: 8vh;
   justify-content: space-evenly;
   align-items: center;
 }
-.gridContainer .header li {
+.grid-container-inicio .header-inicio__ul li {
   display: inline-block;
 }
-.gridContainer .header li:hover {
+.grid-container-inicio .header-inicio__ul li:hover {
   color: rgba(0, 0, 0, 0.302);
   scale: 1.1;
 }
-.gridContainer .main {
+.grid-container-inicio .main-inicio {
   display: grid;
   grid-template-rows: 50% 30% 20%;
-  z-index: 1;
 }
-.gridContainer .main .containerTitle {
+.grid-container-inicio .main-inicio__title {
   text-align: center;
   margin: auto;
 }
-.gridContainer .main .containerTitle .h1 {
+.grid-container-inicio .main-inicio__title .h1 {
   margin-top: 10vh;
-  font-size: 50px;
+  font-size: 2.4rem;
   font-weight: 800;
 }
-.gridContainer .main .containerOptions {
+.grid-container-inicio .main-inicio__options {
   display: grid;
   grid-template-columns: 1fr 7.5fr 1fr;
 }
-.gridContainer .main .containerOptions .containerBoxes {
+.grid-container-inicio .main-inicio__options .main-inicio__boxes {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   text-align: center;
 }
-.gridContainer .main .containerOptions .containerBoxes .containerBox {
+.grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box {
   margin: auto;
-  font-size: 3.5vh;
-  font-weight: 500;
+  font-weight: 600;
   border: rgba(255, 210, 210, 0.4392156863) 1.5px solid;
   border-radius: 8px;
-  width: 24vw;
+  width: 34vw;
   height: 10vh;
   background-color: rgba(255, 210, 210, 0.1882352941);
   display: grid;
 }
-.gridContainer .main .containerOptions .containerBoxes .containerBox:hover {
+.grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box:hover {
   background-color: rgba(255, 210, 210, 0.2549019608);
   scale: 1.01;
 }
-.gridContainer .main .containerOptions .containerBoxes .containerBox p {
+.grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box--health {
+  display: none;
+}
+.grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box p {
   align-self: center;
-  /* color: rgb(255, 255, 255); */
-  /* text-shadow: 1px 1px 2px rgb(186, 186, 186), 0 0 1em rgb(31, 158, 78), 0 0 0.2em rgb(255, 13, 0); */
   text-shadow: 1px 1px 1px #ffd2d2, -1px -1px 2px #ffd2d2;
 }
-.gridContainer .main .containerOptions .arrow {
+.grid-container-inicio .main-inicio__options .main-inicio__arrow {
   margin: auto;
 }
-.gridContainer .main .containerOptions .arrow button {
+.grid-container-inicio .main-inicio__options .main-inicio__arrow--btn {
   height: 5vh;
   width: 4vw;
   border: none;
@@ -185,27 +188,78 @@
   background-size: cover;
   background-position: center;
 }
-.gridContainer .main .containerOptions .arrow button:hover {
+.grid-container-inicio .main-inicio__options .main-inicio__arrow--btn:hover {
   scale: 1.05;
 }
-.gridContainer .main .containerOptions .arrow .button1 {
+.grid-container-inicio .main-inicio__options .main-inicio__arrow .main-inicio__arrow--btn1 {
   background-image: url("/images/back_arrow_5821.png");
 }
-.gridContainer .main .containerOptions .arrow .button2 {
+.grid-container-inicio .main-inicio__options .main-inicio__arrow .main-inicio__arrow--btn2 {
   background-image: url("/images/forwardarrow_haciaadelante_4836.png");
 }
-.gridContainer .main .containerStart {
+.grid-container-inicio .main-inicio__start {
   text-align: center;
-  font-size: 7vh;
   font-weight: 600;
 }
-.gridContainer .main .containerStart p {
+.grid-container-inicio .main-inicio__start p {
   display: inline-block;
   text-shadow: 1px 1px 1px #ffd2d2;
+  font-size: 2.2rem;
 }
-.gridContainer .main .containerStart p:hover {
+.grid-container-inicio .main-inicio__start p:hover {
   color: rgba(0, 0, 139, 0.8078431373);
   scale: 1.1;
 }
 
-/* HOW TO AFFECT A PARENT HOVERING A CHILD? *//*# sourceMappingURL=style.css.map */
+/* HOW TO AFFECT A PARENT HOVERING A CHILD? */
+@media only screen and (min-width: 768px) {
+  .grid-container-inicio {
+    background-image: url("/images/inicio.jpg");
+    background-size: cover;
+    background-position: 100% 45%;
+  }
+  .grid-container-inicio .header-inicio__ul {
+    width: 25vw;
+  }
+  .grid-container-inicio .main-inicio__title .h1 {
+    font-size: 3rem;
+  }
+  .grid-container-inicio .main-inicio__options .main-inicio__boxes {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box {
+    width: 24vw;
+    height: 13vh;
+    font-size: 1.5rem;
+  }
+  .grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box--health {
+    display: grid;
+  }
+  .grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box p {
+    font-size: 1.3rem;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .grid-container-inicio {
+    grid-template-rows: 10vh 90vh;
+  }
+  .grid-container-inicio .header-inicio__ul {
+    width: 17vw;
+    height: 10vh;
+  }
+  .grid-container-inicio .header-inicio__ul a {
+    font-size: 1.3rem;
+  }
+  .grid-container-inicio .main-inicio__title .h1 {
+    font-size: 3.5rem;
+  }
+  .grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box--health {
+    display: grid;
+  }
+  .grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box p {
+    font-size: 1.6rem;
+  }
+  .grid-container-inicio .main-inicio__start p {
+    font-size: 3rem;
+  }
+}/*# sourceMappingURL=style.css.map */
