--- a/styles/style.css
+++ b/styles/style.css
@@ -20,43 +20,74 @@
 }
 .grid-container-sign .header-Sign {
   height: 8vh;
+  border-bottom: #ffd2d2 solid 1px;
 }
 .grid-container-sign .header-Sign nav {
   height: 100%;
 }
 .grid-container-sign .header-Sign nav .header-Sign__logo {
   display: flex;
+  height: 100%;
   align-items: center;
+  padding: 0 4vw;
+}
+.grid-container-sign .header-Sign nav .header-Sign__logo a {
+  font-weight: 600;
 }
 .grid-container-sign .main-Sign {
-  display: grid;
-  grid-template-columns: 55% 45%;
+  display: flex;
   height: 92vh;
 }
 .grid-container-sign .main-Sign__info {
-  display: flex;
+  display: none;
+  background-image: url("/images/main-sign__info--img2.jpg");
+  background-size: cover;
+  background-position: 50% 50%;
   height: 100%;
 }
 .grid-container-sign .main-Sign__info .main-Sign__text {
   margin: auto;
   width: 75%;
   height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: rgba(252, 231, 231, 0.4);
 }
 .grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square {
-  margin: 10% 20% 20% 20%;
+  height: 70%;
+  width: 70%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square h1 {
+  font-size: 1.8rem;
+  color: rgba(0, 0, 139, 0.8352941176);
+}
+.grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square h1 strong {
+  font-size: 1.8rem;
+  color: #00008b;
+}
+.grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square p {
+  margin-bottom: 5vh;
 }
 .grid-container-sign .main-Sign__container {
   display: flex;
+  background-color: rgba(255, 210, 210, 0.4862745098);
+  background: linear-gradient(0deg, rgba(252, 231, 231, 0.4) 0%, rgba(255, 210, 210, 0.7529411765) 100%);
+  border-radius: 4px;
+  margin: auto;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form {
   margin: auto;
-  width: 75%;
-  height: 70%;
+  width: 75vw;
+  height: 75vh;
   /* background-color: ; */
   display: flex;
   flex-direction: column;
-  padding: 4vh 4vw;
+  padding: 8vh 4vw 4vh 2vw;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form--description {
   margin: 2vh 0;
@@ -71,41 +102,182 @@
   border-radius: 3px;
   margin: 1vh 0;
   padding: 1vh 0;
+  background-color: transparent;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input:focus {
+  outline: none;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input:hover {
+  background-color: rgba(255, 210, 210, 0.137254902);
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__help {
   display: flex;
   justify-content: space-between;
-  font-size: 0.75em;
-  margin: 1vh 0.2vw;
+  margin: 2vh 0.5vw;
 }
-.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__other-option, .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__create-account {
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__help p {
+  font-size: 0.7em;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__divisor {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 8vh;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__divisor-side {
+  width: 30%;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__divisor-side hr {
+  background-color: #ffd2d2;
+  border: none;
+  height: 1px;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__create-account {
   margin: auto;
+}
+.grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__create-account:hover {
+  color: rgba(0, 0, 139, 0.8352941176);
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__social-media {
   display: flex;
   justify-content: space-around;
   list-style-type: none;
+  margin: 1vh 0;
 }
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__social-media i {
   width: 1vw;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  color: #00008b;
+  font-family: "Lato", sans-serif;
+  font-size: 13px;
+  box-sizing: border-box;
+}
+
 .grid-container-home {
   display: grid;
   grid-template-rows: 8vh 100vh 30vh;
+  background-color: rgba(252, 231, 231, 0.4);
 }
 .grid-container-home .header-Home {
   display: grid;
-  grid-template-columns: 20vw 50vw 30vw;
-  background-color: #ffd2d2;
+  grid-template-columns: 35% 50% 15%;
+}
+.grid-container-home .header-Home__start {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.grid-container-home .header-Home__start--brand {
+  font-size: 1.5rem;
+}
+.grid-container-home .header-Home__center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.grid-container-home .header-Home__center .header-Home__search {
+  background-color: transparent;
+  border: 1px solid #ffd2d2;
+  border-radius: 14px;
+  width: 40vw;
+  height: 5vh;
+  display: grid;
+  grid-template-columns: 90% 10%;
+}
+.grid-container-home .header-Home__center .header-Home__search--input {
+  width: 100%;
+  overflow: hidden;
+}
+.grid-container-home .header-Home__center .header-Home__search--input ::-moz-placeholder {
+  color: #00008b;
+}
+.grid-container-home .header-Home__center .header-Home__search--input ::placeholder {
+  color: #00008b;
+}
+.grid-container-home .header-Home__center .header-Home__search .search__input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  letter-spacing: 0.2rem;
+}
+.grid-container-home .header-Home__center .header-Home__search .search__input:focus {
+  outline: none;
+}
+.grid-container-home .header-Home__center .header-Home__search--btn {
+  display: flex;
+  margin: auto;
+}
+.grid-container-home .header-Home__end {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .grid-container-home .container-Home {
   display: grid;
-  grid-template-columns: 10vw 90vw;
-  background-color: rosybrown;
+  grid-template-columns: 10% 90%;
 }
-.grid-container-home .container-Home .aside-Home {
-  background-color: palegoldenrod;
+.grid-container-home .container-Home .main-Home {
+  padding: 1.5rem 2rem;
+}
+.grid-container-home .container-Home .main-Home__recommended {
+  margin-bottom: 2vh;
+}
+.grid-container-home .container-Home .main-Home__recommended--h1 {
+  font-size: 2rem;
+}
+.grid-container-home .container-Home .main-Home__recommended-container {
+  display: grid;
+  grid-gap: 1rem;
+  padding: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 20.5vh);
+}
+.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box {
+  display: grid;
+  grid-template-columns: 35% 65%;
+}
+.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box--img {
+  height: 20.5vh;
+}
+.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box--img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box .main-Home__recommended-info {
+  margin: 0.4vh 0 0.1vh 1vw;
+}
+.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box .main-Home__recommended-info--body {
+  line-height: 1.5;
+}
+.grid-container-home .container-Home .main-Home__current--h2 {
+  font-size: 2rem;
+}
+.grid-container-home .container-Home .main-Home__current-container {
+  display: grid;
+  grid-gap: 1rem;
+  padding: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 17.5vh);
+}
+.grid-container-home .container-Home .main-Home__current-container .main-Home__current-box {
+  display: grid;
+  grid-template-columns: 35% 65%;
+}
+.grid-container-home .container-Home .main-Home__current-container .main-Home__current-info {
+  margin: 0.4vh 0 0.1vh 1vw;
+}
+.grid-container-home .container-Home .main-Home__current-container .main-Home__current-info--body {
+  line-height: 1.5;
+}
+.grid-container-home .container-Home .main-Home__current-container .main-Home__current-info--title {
+  font-size: 1.3rem;
 }
 
 .grid-container-inicio {
@@ -238,6 +410,26 @@
   .grid-container-inicio .main-inicio__options .main-inicio__boxes .main-inicio__box p {
     font-size: 1.3rem;
   }
+  .grid-container-sign {
+    background-color: #ffffff;
+    background-image: none;
+  }
+  .grid-container-sign .header-Sign {
+    background-color: rgba(252, 231, 231, 0.4);
+    border-bottom: none;
+  }
+  .grid-container-sign .main-Sign {
+    display: grid;
+    grid-template-columns: 55% 45%;
+    height: 92vh;
+  }
+  .grid-container-sign .main-Sign__info {
+    display: flex;
+  }
+  .grid-container-sign .main-Sign__container {
+    background: none;
+    margin: 0;
+  }
 }
 @media only screen and (min-width: 1024px) {
   .grid-container-inicio {
@@ -261,5 +453,14 @@
   }
   .grid-container-inicio .main-inicio__start p {
     font-size: 3rem;
+  }
+  .grid-container-sign .main-Sign__info .main-Sign__text {
+    width: 65%;
+  }
+  .grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square h1 {
+    font-size: 2rem;
+  }
+  .grid-container-sign .main-Sign__info .main-Sign__text .main-Sign__square p {
+    font-size: 1.2rem;
   }
 }/*# sourceMappingURL=style.css.map */
