--- a/styles/views/_signIn.scss
+++ b/styles/views/_signIn.scss
@@ -4,43 +4,72 @@
     background-position: 50% 50%;
     .header-Sign {
         height: 8vh;
+        border-bottom: #ffd2d2 solid 1px;
         nav{
             height: 100%;
             .header-Sign__logo{
                 display: flex;
+                height: 100%;
                 align-items: center;
+                padding: 0 4vw;
+                a{
+                    font-weight: 600;
+                }
             }
-        }
-        
+        }     
     }
-    
     .main-Sign {
-        display: grid;
-        grid-template-columns: 55% 45%;
+        display: flex;
         height: 92vh;
         &__info {
-            display: flex;
+            display: none;
+            background-image: url("/images/main-sign__info--img2.jpg");
+            background-size: cover;
+            background-position: 50% 50%;
             height: 100%;
             .main-Sign__text {
                 margin: auto;
                 width: 75%;
                 height: 60%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 background-color: #fce7e766;
                 .main-Sign__square {
-                    margin: 10% 20% 20% 20%;
+                    height: 70%;
+                    width: 70%;
+                    margin: auto;
+                    display: flex;    
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    h1{
+                        font-size: 1.8rem;
+                        color: #00008bd5;
+                        strong{
+                            font-size: 1.8rem;
+                            color: #00008b;
+                        }
+                    }
+                    p{
+                        margin-bottom: 5vh;
+                    }
                 }
             }
         }
         &__container {
             display: flex;
+            background-color: #ffd2d27c;
+            background: linear-gradient(0deg, #fce7e766 0%, #ffd2d2c0 100%);
+            border-radius: 4px;
+            margin: auto;
             .main-Sign__form {
                 margin: auto;
-                width: 75%;
-                height: 70%;
+                width: 75vw;
+                height: 75vh;
                 /* background-color: ; */
                 display: flex;
                 flex-direction: column;
-                padding: 4vh 4vw;
+                padding: 8vh 4vw 4vh 2vw;
                 &--description {
                     margin: 2vh 0;
                     font-size: 0.85em;
@@ -52,18 +81,47 @@
                     border-radius: 3px;
                     margin: 1vh 0;
                     padding: 1vh 0;
+                    background-color: transparent;
+                    &:focus{
+                        outline: none;
+                    }
+                    &:hover{
+                        background-color: #ffd2d223;
+                    }
                 }
                 .main-Sign__help {
                     display: flex;
                     justify-content: space-between;
-                    font-size: 0.75em;
-                    margin: 1vh 0.2vw;
+                    margin: 2vh 0.5vw;
+                    p{
+                        font-size: 0.7em;
+                    }
                 }
-                .main-Sign__other-option,.main-Sign__create-account {margin: auto;}
+                .main-Sign__divisor{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    height: 8vh;
+                    &-side{
+                        width: 30%;
+                        hr{
+                            background-color: #ffd2d2;
+                            border: none;
+                            height: 1px;
+                        }
+                    }
+                }
+                .main-Sign__create-account {
+                    margin: auto;
+                    &:hover{
+                        color: #00008bd5 ;
+                    }
+                }
                 .main-Sign__social-media {
                     display: flex;
                     justify-content: space-around;
                     list-style-type: none;
+                    margin: 1vh 0;
                     i {
                         width: 1vw;
                     }
