new icons and structure

--- a/styles/views/_inicio.scss
+++ b/styles/views/_inicio.scss
@@ -7,7 +7,7 @@
     background-position: 100%;
     .header-inicio {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         &__ul {
             display: flex;
             width: 35vw;
