--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
   color: #00008B;
   font-family: "Lato", sans-serif;
   font-size: 13px;
+  box-sizing: border-box;
 }
 
 .grid-container-sign {
@@ -148,39 +149,31 @@
   width: 1vw;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  color: #00008b;
-  font-family: "Lato", sans-serif;
-  font-size: 13px;
-  box-sizing: border-box;
-}
-
 .grid-container-home {
   display: grid;
-  grid-template-rows: 8vh 100vh 30vh;
-  background-color: rgba(252, 231, 231, 0.4);
+  grid-template-rows: 9.5vh 100vh 30vh;
 }
-.grid-container-home .header-Home {
+.grid-container-home .header-home {
   display: grid;
-  grid-template-columns: 35% 50% 15%;
+  grid-template-columns: 35% 45% 20%;
+  position: sticky;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.9803921569);
 }
-.grid-container-home .header-Home__start {
+.grid-container-home .header-home__start {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
-.grid-container-home .header-Home__start--brand {
+.grid-container-home .header-home__start--brand a {
   font-size: 1.5rem;
 }
-.grid-container-home .header-Home__center {
+.grid-container-home .header-home__center {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.grid-container-home .header-Home__center .header-Home__search {
+.grid-container-home .header-home__center .header-home__search {
   background-color: transparent;
   border: 1px solid #ffd2d2;
   border-radius: 14px;
@@ -189,17 +182,17 @@
   display: grid;
   grid-template-columns: 90% 10%;
 }
-.grid-container-home .header-Home__center .header-Home__search--input {
+.grid-container-home .header-home__center .header-home__search--input {
   width: 100%;
   overflow: hidden;
 }
-.grid-container-home .header-Home__center .header-Home__search--input ::-moz-placeholder {
+.grid-container-home .header-home__center .header-home__search--input ::-moz-placeholder {
   color: #00008b;
 }
-.grid-container-home .header-Home__center .header-Home__search--input ::placeholder {
+.grid-container-home .header-home__center .header-home__search--input ::placeholder {
   color: #00008b;
 }
-.grid-container-home .header-Home__center .header-Home__search .search__input {
+.grid-container-home .header-home__center .header-home__search .search__input {
   background-color: transparent;
   border: none;
   height: 100%;
@@ -207,77 +200,221 @@
   text-align: center;
   letter-spacing: 0.2rem;
 }
-.grid-container-home .header-Home__center .header-Home__search .search__input:focus {
+.grid-container-home .header-home__center .header-home__search .search__input:focus {
   outline: none;
 }
-.grid-container-home .header-Home__center .header-Home__search--btn {
+.grid-container-home .header-home__center .header-home__search--btn {
   display: flex;
   margin: auto;
 }
-.grid-container-home .header-Home__end {
+.grid-container-home .header-home__center .header-home__search--btn lord-icon {
+  width: 1.6rem;
+  height: 1.6rem;
+}
+.grid-container-home .header-home__end {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-.grid-container-home .container-Home {
+.grid-container-home .header-home lord-icon {
+  width: 1.95rem;
+  height: 1.95rem;
+  color: #00008b;
+}
+.grid-container-home .container-home {
   display: grid;
-  grid-template-columns: 10% 90%;
+  grid-template-areas: "aside bar" "aside main";
 }
-.grid-container-home .container-Home .main-Home {
-  padding: 1.5rem 2rem;
+.grid-container-home .container-home .aside-home {
+  grid-area: aside;
+  width: 8vw;
+  position: fixed;
+  top: 8vh;
 }
-.grid-container-home .container-Home .main-Home__recommended {
+.grid-container-home .container-home .aside-home__ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style-type: none;
+}
+.grid-container-home .container-home .aside-home__ul .aside-home__li {
+  margin: 2vh 0;
+  padding: 3vh 0;
+  height: 5vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.grid-container-home .container-home .aside-home__ul .aside-home__li a {
+  text-align: center;
+}
+.grid-container-home .container-home .aside-home__ul .aside-home__li a lord-icon {
+  width: 1.6rem;
+  height: 1.6rem;
+}
+.grid-container-home .container-home .aside-home__ul .aside-home__li p {
+  font-size: 0.75rem;
+  text-align: center;
+}
+.grid-container-home .container-home .bar-home {
+  grid-area: bar;
+  height: 8vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: fixed;
+  margin-left: 8vw;
+  background-color: rgba(255, 255, 255, 0.9803921569);
+}
+.grid-container-home .container-home .bar-home__btn {
+  padding: 0.5rem 1rem;
+  margin: 1vh 1vw;
+  border: none;
+  background-color: rgba(255, 210, 210, 0.5607843137);
+  border-radius: 6px;
+}
+.grid-container-home .container-home .bar-home__arrow--btn {
+  height: 3vh;
+  width: 4vw;
+  border: none;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  background-image: url("../../images/forwardarrow_haciaadelante_4836.png");
+}
+.grid-container-home .container-home .bar-home__arrow--btn:hover {
+  scale: 1.05;
+}
+.grid-container-home .container-home .main-home {
+  grid-area: main;
+  width: 90vw;
+  position: relative;
+  margin-left: 8vw;
+  margin-top: 8vh;
+  z-index: -100;
+}
+.grid-container-home .container-home .main-home__recommended {
   margin-bottom: 2vh;
 }
-.grid-container-home .container-Home .main-Home__recommended--h1 {
+.grid-container-home .container-home .main-home__recommended--h1 {
   font-size: 2rem;
+  margin-top: 2vh;
+  margin-left: 2rem;
 }
-.grid-container-home .container-Home .main-Home__recommended-container {
-  display: grid;
-  grid-gap: 1rem;
-  padding: 1rem;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 20.5vh);
-}
-.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box {
-  display: grid;
-  grid-template-columns: 35% 65%;
-}
-.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box--img {
+.grid-container-home .container-home .main-home__recommended-container {
+  display: flex;
   height: 20.5vh;
+  justify-content: space-around;
 }
-.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box--img img {
+.grid-container-home .container-home .main-home__recommended-container .main-home__recommended-box {
+  display: grid;
+  margin: 1vh 1vw;
+  background-color: gainsboro;
+  grid-template-rows: 65% 35%;
+  max-width: 20vw;
+  min-width: 17vw;
+}
+.grid-container-home .container-home .main-home__recommended-container .main-home__recommended-box img {
   max-width: 100%;
   max-height: 100%;
 }
-.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box .main-Home__recommended-info {
-  margin: 0.4vh 0 0.1vh 1vw;
+.grid-container-home .container-home .main-home__recommended-container .main-home__recommended-info {
+  background-color: rebeccapurple;
 }
-.grid-container-home .container-Home .main-Home__recommended-container .main-Home__recommended-box .main-Home__recommended-info--body {
+.grid-container-home .container-home .main-home__recommended-container .main-home__recommended-info--body {
   line-height: 1.5;
 }
-.grid-container-home .container-Home .main-Home__current--h2 {
+.grid-container-home .container-home__current--h2 {
   font-size: 2rem;
+  margin-top: 2vh;
+  margin-left: 2rem;
 }
-.grid-container-home .container-Home .main-Home__current-container {
-  display: grid;
-  grid-gap: 1rem;
-  padding: 1rem;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 17.5vh);
-}
-.grid-container-home .container-Home .main-Home__current-container .main-Home__current-box {
+.grid-container-home .container-home__current-container .main-home__current-box {
   display: grid;
   grid-template-columns: 35% 65%;
 }
-.grid-container-home .container-Home .main-Home__current-container .main-Home__current-info {
+.grid-container-home .container-home__current-container .main-home__current-info {
   margin: 0.4vh 0 0.1vh 1vw;
 }
-.grid-container-home .container-Home .main-Home__current-container .main-Home__current-info--body {
+.grid-container-home .container-home__current-container .main-home__current-info--body {
   line-height: 1.5;
 }
-.grid-container-home .container-Home .main-Home__current-container .main-Home__current-info--title {
+.grid-container-home .container-home__current-container .main-home__current-info--title {
   font-size: 1.3rem;
+}
+.grid-container-home .container-home__slide-container {
+  min-height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #EFEFEF;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content {
+  margin: 0 40px;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card {
+  border-radius: 25px;
+  background-color: #FFF;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content {
+  padding: 10px 14px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content .main-home__overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: #4070F4;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content .main-home__overlay .main-home__card-image {
+  position: relative;
+  height: 23vh;
+  width: 20vw;
+  border-radius: 50%;
+  background-color: #FFF;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content .main-home__overlay .main-home__card-image .main-home__card-img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content {
+  padding: 10px 14px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--name {
+  font-size: 18px;
+  font-weight: 500;
+  color: #333;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--description {
+  font-size: 14px;
+  color: #707070;
+  text-align: center;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--button {
+  border: none;
+  font-size: 16px;
+  color: #FFF;
+  padding: 8px 16px;
+  background-color: #4070F4;
+  border-radius: 6px;
+  margin: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.grid-container-home .container-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--button:hover {
+  background-color: #265DF2;
 }
 
 .grid-container-inicio {
@@ -290,7 +427,7 @@
 }
 .grid-container-inicio .header-inicio {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 .grid-container-inicio .header-inicio__ul {
   display: flex;
