--- a/styles/utilities/_mixins.scss
+++ b/styles/utilities/_mixins.scss
@@ -1,9 +1,10 @@
 @mixin title{
     font-size: 2rem;
+    margin-top: 2vh;
+    margin-left: 2rem;
 }
-
-@mixin container{
-    display: grid;
-    grid-gap: 1rem;
-    padding: 1rem;
-}
+// @mixin container{
+//     display: grid;
+//     grid-gap: 1rem;
+//     padding: 1rem;
+// }
