--- a/styles/views/_home.scss
+++ b/styles/views/_home.scss
@@ -1,38 +1,32 @@
 @import "../utilities/mixins";
-* {
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    color: #00008b;
-    font-family: "Lato", sans-serif;
-    font-size: 13px;
-    box-sizing: border-box;
-}
 
 .grid-container-home {
     display: grid;
-    grid-template-rows: 8vh 100vh 30vh;
-    background-color: #fce7e766;
-    .header-Home {
+    grid-template-rows: 9.5vh 100vh 30vh;
+// HEADER 
+    .header-home {
         display: grid;
-        grid-template-columns: 35% 50% 15%;
-
+        grid-template-columns: 35% 45% 20%;
+        position:sticky;
+        top: 0;
+        background-color: #fffffffa;
+        // INICIO HEADER
         &__start {
             display: flex;
             align-items: center;
             justify-content: space-around;
-
             &--brand {
-                font-size: 1.5rem;
+                a{
+                    font-size: 1.5rem;
+                }
             }
         }
-
+        // CENTRO HEADER
         &__center {
             display: flex;
             align-items: center;
             justify-content: center;
-
-            .header-Home__search {
+            .header-home__search {
                 background-color: transparent;
                 border: 1px solid #ffd2d2;
                 border-radius: 14px;
@@ -47,7 +41,6 @@
                         color: #00008b;
                     }
                 }
-
                 .search__input {
                     background-color: transparent;
                     border: none;
@@ -55,53 +48,141 @@
                     width: 100%;
                     text-align: center;
                     letter-spacing: 0.2rem;
-
                     &:focus {
                         outline: none;
                     }
                 }
-
                 &--btn {
                     display: flex;
                     margin: auto;
+                    lord-icon{
+                        width: 1.6rem;
+                        height: 1.6rem;
+                    }
                 }
             }
         }
-
+        // FINAL HEADER
         &__end {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
         }
+        lord-icon{
+            width:1.95rem;
+            height:1.95rem;
+            color: #00008b;
+        }
     }
-
-    .container-Home {
+// CUERPO DEL HOME
+    .container-home {
         display: grid;
-        grid-template-columns: 10% 90%;
+        grid-template-areas:"aside bar"
+                            "aside main";
+//ASIDE 
+        .aside-home{
+            grid-area: aside;
+            width: 8vw;
+            position:fixed;
+            top: 8vh;
+            &__ul{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                list-style-type:none;
+                .aside-home__li{
+                    // background-color: gainsboro;
+                    margin: 2vh 0 ;
+                    padding: 3vh 0;
+                    height: 5vh;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    a{
+                        text-align: center;
+                        lord-icon{
+                            width: 1.6rem;
+                            height: 1.6rem;
+                        }
+                    }
+                    p{
+                        font-size: 0.75rem;
+                        text-align: center;
+                    }
 
-        .main-Home {
-            padding: 1.5rem 2rem;
+                }
+            }
+        }
+// BAR 
+        .bar-home{
+            grid-area: bar;
+            height: 8vh;
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            position: fixed;
+            margin-left: 8vw;
+            background-color: #fffffffa;
+            &__btn{
+                padding: 0.5rem 1rem;
+                margin: 1vh 1vw;
+                border: none;
+                background-color: #ffd2d28f;
+                border-radius: 6px;
+            }
+            &__arrow{
+                &--btn{
+                    height: 3vh;
+                    width: 4vw;
+                    border: none;
+                    background-color: transparent;
+                    background-size: cover;
+                    background-position: center;
+                    background-image: url("../../images/forwardarrow_haciaadelante_4836.png");
+                    &:hover {
+                        scale: 1.05;
+                    }
+                }
+            }
+        }
+// MAIN
+        .main-home {
+            grid-area: main;
+            width: 90vw;
+            position: relative;
+            margin-left: 8vw;
+            margin-top: 8vh;
+            z-index: -100;
             &__recommended {
                 margin-bottom: 2vh;
                 &--h1 {
                     @include title;
                 }
                 &-container {
-                    @include container;
-                    grid-template-columns: repeat(3, 1fr);
-                    grid-template-rows: repeat(2, 20.5vh);
-                    .main-Home__recommended-box {
+                    // @include container;
+                    // grid-template-columns: repeat(3, 1fr);
+                    // grid-template-rows: repeat(2, 20.5vh);
+                    display: flex;
+                    height: 20.5vh;
+                    justify-content: space-around;
+                    .main-home__recommended-box {
                         display: grid;
-                        grid-template-columns: 35% 65%;
-                        &--img {
-                            height: 20.5vh;
+                        margin: 1vh 1vw;
+                        background-color: gainsboro;
+                        grid-template-rows: 65% 35% ;
+                        max-width: 20vw;
+                        min-width: 17vw;
+                        // &--img {
+                        //     height: 20.5vh;
                             img {
                                 max-width: 100%;
                                 max-height: 100%;
                             }
                         }
-                        .main-Home__recommended-info {
-                            margin: 0.4vh 0 0.1vh 1vw;
+                        .main-home__recommended-info {
+                            // margin: 0.4vh 0 0.1vh 1vw;
+                            background-color: rebeccapurple;
                             &--body {
                                 // display: flex;
                                 // align-items:stretch;
@@ -116,17 +197,17 @@
                     @include title;
                 }
                 &-container {
-                    @include container;
-                    grid-template-columns: repeat(2, 1fr);
-                    grid-template-rows: repeat(2, 17.5vh);
-                    .main-Home__current-box {
+                    // @include container;
+                    // grid-template-columns: repeat(2, 1fr);
+                    // grid-template-rows: repeat(2, 17.5vh);
+                    .main-home__current-box {
                         display: grid;
                         grid-template-columns: 35% 65%;
                         // &--img{
                         // background-color: honeydew;
                         // }
                     }
-                    .main-Home__current-info {
+                    .main-home__current-info {
                         margin: 0.4vh 0 0.1vh 1vw;
                         &--body {
                             line-height: 1.5;
@@ -137,6 +218,80 @@
                     }
                 }
             }
+            &__slide-container{
+                min-height: 50vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #EFEFEF;
+                .main-home__slide-content{
+                    margin: 0 40px;
+                    .main-home__card-wrapper{
+                        .main-home__card{
+                            border-radius: 25px;
+                            background-color: #FFF;
+                            .main-home__image-content{
+                                    padding: 10px 14px;
+                                    align-items: center;
+                                    display: flex;
+                                    flex-direction: column;
+                                    row-gap: 5px;
+                                .main-home__overlay{
+                                    position: absolute;
+                                    height: 100%;
+                                    width: 100%;
+                                    left: 0;
+                                    top: 0;
+                                    background-color: #4070F4;
+                                    .main-home__card-image{
+                                        position: relative;
+                                        height: 23vh;
+                                        width: 20vw;
+                                        border-radius: 50%;
+                                        background-color: #FFF;
+                                        .main-home__card-img{
+                                            height: 100%;
+                                            width: 100%;
+                                            object-fit: cover;
+                                            border-radius: 50%;
+                                        }
+                                    }
+                                }
+                            }
+                            .main-home__card-content{
+                                padding: 10px 14px;
+                                align-items: center;
+                                display: flex;
+                                flex-direction: column;
+                                &--name{
+                                    font-size: 18px;
+                                    font-weight: 500;
+                                    color: #333;
+                                }
+                                &--description{
+                                    font-size: 14px;
+                                    color: #707070;
+                                    text-align: center;
+                                }
+                                &--button{
+                                    border: none;
+                                    font-size: 16px;
+                                    color: #FFF;
+                                    padding: 8px 16px;
+                                    background-color: #4070F4;
+                                    border-radius: 6px;
+                                    margin: 14px;
+                                    cursor: pointer;
+                                    transition: all 0.3s ease;
+                                    &:hover{
+                                        background-color: #265DF2;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
-}
+
