finish first js, new home design

--- a/styles/utilities/_mixins.scss
+++ b/styles/utilities/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin title{
-    font-size: 2rem;
+    font-size: 1rem;
     margin-top: 2vh;
-    margin-left: 2rem;
+    margin-left: 0.2vw;
 }
 // @mixin container{
 //     display: grid;
