--- a/styles/style.css
+++ b/styles/style.css
@@ -221,27 +221,30 @@
 }
 .grid-container-home .container-home .aside-home {
   grid-area: aside;
-  width: 10vw;
+  width: 7.7vw;
   position: fixed;
-  top: 8vh;
+  top: 8.5vh;
+  height: 90.5vh;
 }
 .grid-container-home .container-home .aside-home__ul {
   display: flex;
+  height: 100%;
   flex-direction: column;
   align-items: center;
   list-style-type: none;
+  justify-content: space-around;
+  margin: 0 1.5vw;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li {
-  margin: 0.8rem 0.8vw;
-  padding: 2.1rem 0.3rem;
-  height: 2rem;
+  height: 10vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border-radius: 4px;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li:hover {
-  background-color: rgba(255, 210, 210, 0.3490196078);
-  border-radius: 4px;
+  background-color: rgba(255, 210, 210, 0.5607843137);
+  cursor: pointer;
 }
 .grid-container-home .container-home .aside-home__ul .aside-home__li a {
   text-align: center;
@@ -256,7 +259,7 @@
 }
 .grid-container-home .container-home .bar-home {
   grid-area: bar;
-  height: 8vh;
+  height: 6vh;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -273,8 +276,9 @@
   border-radius: 6px;
 }
 .grid-container-home .container-home .bar-home__btn:hover {
-  background-color: rgba(255, 210, 210, 0.6980392157);
+  background-color: rgba(255, 177, 177, 0.7019607843);
   cursor: pointer;
+  border-bottom: solid 1px rgba(217, 154, 154, 0.7019607843);
 }
 .grid-container-home .container-home .bar-home__btn .selected {
   background-color: #4070F4;
@@ -293,31 +297,31 @@
 }
 .grid-container-home .container-home .main-home {
   grid-area: main;
-  width: 88vw;
+  width: 88.3vw;
   position: relative;
   margin-left: 8vw;
-  margin-top: 8vh;
+  margin-top: 6vh;
+  overflow: hidden;
   z-index: -100;
 }
 .grid-container-home .container-home .main-home__recommended {
   margin-bottom: 2vh;
 }
 .grid-container-home .container-home .main-home__recommended--h1 {
-  font-size: 2rem;
+  font-size: 1rem;
   margin-top: 2vh;
-  margin-left: 2rem;
+  margin-left: 0.2vw;
 }
 .grid-container-home .container-home .main-home__recommended-container {
   display: flex;
   height: 20.5vh;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 .grid-container-home .container-home .main-home__recommended-container .main-home__recommended-box {
   display: grid;
-  margin: 1vh 1vw;
+  margin: 1vh 0.2vw;
   background-color: gainsboro;
   grid-template-rows: 65% 35%;
-  max-width: 20vw;
   min-width: 17vw;
 }
 .grid-container-home .container-home .main-home__recommended-container .main-home__recommended-box img {
@@ -331,9 +335,9 @@
   line-height: 1.5;
 }
 .grid-container-home .container-home__current--h2 {
-  font-size: 2rem;
+  font-size: 1rem;
   margin-top: 2vh;
-  margin-left: 2rem;
+  margin-left: 0.2vw;
 }
 .grid-container-home .container-home__current-container .main-home__current-box {
   display: grid;
@@ -532,10 +536,6 @@
 #87cfeb36
 #ffd2d2
  */
-.selected {
-  background-color: rgba(165, 53, 53, 0.6980392157);
-}
-
 @media only screen and (min-width: 768px) {
   .grid-container-inicio {
     background-image: url("/images/inicio.jpg");
