--- a/styles/views/_home.scss
+++ b/styles/views/_home.scss
@@ -82,24 +82,27 @@
 //ASIDE 
         .aside-home{
             grid-area: aside;
-            width: 10vw;
+            width: 7.7vw;
             position:fixed;
-            top: 8vh;
+            top: 8.5vh;
+            height: 90.5vh;
             &__ul{
                 display: flex;
+                height: 100%;
                 flex-direction: column;
                 align-items: center;
                 list-style-type:none;
+                justify-content: space-around;
+                margin: 0 1.5vw;
                 .aside-home__li{
-                    margin: 0.8rem 0.8vw ;
-                    padding: 2.1rem 0.3rem;
-                    height: 2rem;
+                    height: 10vh;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
+                    border-radius: 4px;
                     &:hover{
-                        background-color: #ffd2d259;
-                        border-radius: 4px;
+                        background-color: #ffd2d28f;
+                        cursor: pointer;
                     }
                     a{
                         text-align: center;
@@ -119,7 +122,7 @@
 // BAR 
         .bar-home{
             grid-area: bar;
-            height: 8vh;
+            height: 6vh;
             width: 100%;
             display: flex;
             justify-content: space-evenly;
@@ -134,8 +137,9 @@
                 background-color: #ffd2d28f;
                 border-radius: 6px;
                 &:hover{
-                    background-color: #ffd2d2b2;
+                    background-color: #ffb1b1b3;
                     cursor: pointer;
+                    border-bottom: solid 1px #d99a9ab3;
                 }
             .selected{
                 background-color: #4070F4;
@@ -159,10 +163,11 @@
 // MAIN
         .main-home {
             grid-area: main;
-            width: 88vw;
+            width: 88.3vw;
             position: relative;
             margin-left: 8vw;
-            margin-top: 8vh;
+            margin-top: 6vh;
+            overflow: hidden;
             z-index: -100;
             &__recommended {
                 margin-bottom: 2vh;
@@ -175,13 +180,12 @@
                     // grid-template-rows: repeat(2, 20.5vh);
                     display: flex;
                     height: 20.5vh;
-                    justify-content: space-around;
+                    justify-content:flex-start;
                     .main-home__recommended-box {
                         display: grid;
-                        margin: 1vh 1vw;
+                        margin: 1vh 0.2vw;
                         background-color: gainsboro;
                         grid-template-rows: 65% 35% ;
-                        max-width: 20vw;
                         min-width: 17vw;
                         // &--img {
                         //     height: 20.5vh;
